--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,21 +4,18 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Tour
-    url: tour
+  - name: About
+    url: '#about'
     weight: 10
-  - name: News
-    url: post
+  - name: Papers Discussed
+    url: '#papers'
     weight: 20
-  - name: People
-    url: people
-    weight: 30
-  - name: Events
-    url: event
+  - name: Schedule
+    url: '#Schedule'
     weight: 40
-  - name: Publications
-    url: publication
+  - name: Members
+    url: '#members'
     weight: 50
-  - name: Contact
-    url: contact
+  - name: Join Us
+    url: 'join'
     weight: 60
